feat: improve navigation and presentation. feat: change the way missing prices are handled feat: version the transaction